[workspace]
resolver = "2"

members = [
  # "external/e1000"
  "crates/rinux-bindings"
  , "crates/rinux-fs", "crates/rinux-kernel"
  , "samples/einux-kmod"
  , "samples/einux-vec"
]

[workspace.dependencies]
rinux-bindings = { path = "crates/rinux-bindings" }
rinux-kernel = { path = "crates/rinux-kernel" }
bindgen = "0.72"
