[workspace]
resolver = "2"

members = [
  "samples/e1000",
  # "external/e1000"
  "crates/rinux-bindings",
  "crates/rinux-fs",
  "crates/rinux-helper",
  "crates/rinux-kernel",
  "samples/einux-kmod",
  "samples/einux-vec",
  "samples/rinux-rofs",
]

[workspace.dependencies]
rinux-bindings = { path = "crates/rinux-bindings" }
rinux-helper = { path = "crates/rinux-helper" }
rinux-kernel = { path = "crates/rinux-kernel" }
rinux-fs = { path = "crates/rinux-fs" }
bindgen = "0.72"
